back_end/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-backend
  labels:
    app: dummy-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy-backend
  template:
    metadata:
      name: dummy-backend
      labels:
        app: dummy-backend
    spec:
      containers:
        - name: dummy-backend
          image: dummy-backend:latest
          imagePullPolicy:  Never
      restartPolicy: Always
