back_end/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-backend-service
spec:
  selector:
    app: dummy-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
